example/secondfile/objects/Blocked_Word__c.object
<CustomObject>
    <fields>
        <fullName>Attempted_Uses__c</fullName>
        <label>Attempted Uses</label>
        <summaryForeignKey>Blocked_Word_Audit__c.Blocked_Word_Record__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Blocked_Word__c</fullName>
        <inlineHelpText>Enter word or phrase you&apos;d like to prevent users from entering</inlineHelpText>
        <label>Blocked Word</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Match_Whole_Word__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if you only want to prevent the word when written exactly as entered</inlineHelpText>
        <label>Match Whole Word?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prevent_Post__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Deselect if you&apos;d like to allow the word to be entered, but want to keep an audit of usage</inlineHelpText>
        <label>Prevent Post?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RegexValue__c</fullName>
        <label>RegexValue</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Blocked Word</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Blocked_Word__c</columns>
        <columns>Match_Whole_Word__c</columns>
        <columns>Prevent_Post__c</columns>
        <columns>Status__c</columns>
        <columns>Attempted_Uses__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BW-{0000}</displayFormat>
        <label>Blocked Word Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blocked Words</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>